Adding Basic App Test